<resources>
    <string name="app_name" translatable="false">Gavag</string>

    <string name="gavag_lab_2021_2022" translatable="false">Gavag Lab. ⓒ 2021-2022</string>
    <string name="sponsored_by_armath" translatable="false">SPONSORED BY ARMATH</string>
    <string name="social_media" translatable="false">Social Media:</string>

    <string name="state">State</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="settings">Settings</string>
    <string name="nearestEvents">Nearest events</string>
    <string name="maskAccess">Mask access</string>
    <string name="qrAccess">QR access</string>
    <string name="saveUnmaskedPeople">Save unmasked people\'s photos</string>
    <string name="saveFakeQRPhotos">Save fake QR photos</string>
    <string name="notEnteredSession">Not entered | This session</string>
    <string name="attemptsSession">Attempts | This session</string>
    <string name="notEnteredTotal">Not entered | Total</string>
    <string name="attemptsTotal">Attempts | Total</string>
    <string name="image">Image</string>
    <string name="info">Info</string>


</resources>