<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.LogFragment"
    android:background="@color/page_bg"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/content_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_guide_line_log"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/image"
            android:background="@drawable/corner"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="3dp"
            android:layout_margin="16dp"
            android:background="@drawable/corner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_image"
            app:layout_constraintStart_toStartOf="@id/view_stroke"
            app:layout_constraintEnd_toEndOf="@id/view_stroke"
            android:layout_margin="8dp"
            android:paddingBottom="18dp"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:constraint_referenced_ids="tv_image,tv_info"
            app:flow_horizontalGap="2dp"
            app:layout_constraintEnd_toEndOf="@id/view_recycler"
            app:layout_constraintStart_toStartOf="@id/view_recycler"
            app:layout_constraintTop_toTopOf="@id/view_recycler" />


        <View
            android:id="@+id/view_stroke"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/flow_log"
            app:layout_constraintEnd_toEndOf="@id/flow_log"
            app:layout_constraintTop_toTopOf="@id/flow_log"
            app:layout_constraintBottom_toBottomOf="@id/recycler"
            android:background="@drawable/corner"/>

        <View
            android:id="@+id/view_guide_line_log"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/recycler"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            android:layout_marginTop="16dp" />


        <View
            android:id="@+id/view_info_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/content_background"
            app:layout_constraintBottom_toBottomOf="@id/view_guide_line_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_recycler" />

        <TextView
            android:id="@+id/tv_gavag_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gavag_lab_2021_2022"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/view_recycler"
            app:layout_constraintTop_toTopOf="@id/view_info_3" />

        <TextView
            android:id="@+id/tv_sp_armath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sponsored_by_armath"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_thin"
            app:layout_constraintEnd_toEndOf="@id/tv_gavag_lab"
            app:layout_constraintStart_toStartOf="@id/tv_gavag_lab"
            app:layout_constraintTop_toBottomOf="@id/tv_gavag_lab" />

        <TextView
            android:id="@+id/tv_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/social_media"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="@id/tv_sp_armath"
            app:layout_constraintStart_toStartOf="@id/tv_sp_armath"
            app:layout_constraintTop_toBottomOf="@id/tv_sp_armath" />

        <androidx.cardview.widget.CardView
            android:id="@+id/img_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/facebook"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/img_insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/instagram" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:constraint_referenced_ids="img_facebook, img_insta"
            app:flow_horizontalGap="8dp"
            app:layout_constraintEnd_toEndOf="@id/tv_social"
            app:layout_constraintStart_toStartOf="@id/tv_social"
            app:layout_constraintTop_toBottomOf="@id/tv_social" />

        <View
            android:id="@+id/view_guide_line_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/img_facebook"
            app:layout_constraintTop_toBottomOf="@id/img_facebook" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>